# pymotyc

./: .gitignore  LICENSE  README-PYPI.md  README.md  app.py  app_minimal.py  app_quickstart.py  app_quickstart11.py  app_quickstart2.py  app_quickstart22.py  app_quickstart3.py  app_quickstart4.py  app_quickstart5.py  pytest.ini  requirements-dev.txt  requirements.dev.txt  requirements.txt  run.sh  scratch.py  scratch2.py  scratch_mongo.py  setup.cfg  tox.ini
crud/: rest.py  rest1.py  rest1a.py  rest2.py  rest3.py
examples/: app_minimal.py  app_minimal2.py  app_quickstart.py  app_quickstart2.py  app_quickstart3.py
examples/rest_api/: rest.py  rest1.py  rest1a.py  rest2.py  rest3.py
pymotyc/: __init__.py  collection.py  database.py  engine.py  errors.py  model.py  query.py  util.py
tests/: test_collection.py  test_util.py
tests/integration/: conftest.py  db.py  test_basic.py  test_examples.py
tests/unit/: test_collection.py  test_query.py  test_util.py
