[metadata]
name = pymotyc
version = 0.9.0
author = Anton Ovsyannikov
author_email = anton.ovsyannikov@gmail.com
description = Statically typed asynchronous MongoDB collections with Pydantic models and Motor engine.
long_description = file: README-PYPI.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/AntonOvsyannikov/pymotyc
project_urls =
    Bug Tracker = https://github.com/AntonOvsyannikov/pymotyc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: AsyncIO
    Development Status :: 4 - Beta

[options]
packages =
    pymotyc

python_requires = >=3.7

install_requires =
    pydantic>=1.7
    motor>=2.4
    typing_inspect>=0.6
